# grpc-log-aggregator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  push.sh
client/: CMakeLists.txt  build_client.sh  main.cc
include/: log_service_impl.h
include/utils/: auth_utils.h  log_utils.h  pubsub_utils.h  thread_utils.h  time_utils.h
proto/: log.proto
src/: log_service_impl.cc  main.cc
src/utils/: auth_utils.cc  log_utils.cc  pubsub_utils.cc  thread_utils.cc  time_utils.cc
